...
    
    private let line = UIImageView().then {
        let image = UIImage(named: "line.svg")
        $0.image = image
    }
 
    private lazy var startButton = UIButton().then {
        $0.setStateButtonUI(buttonTitle: "타이머 시작")
        $0.accessibilityIdentifier = "startButton"
        $0.addTarget(self, action: #selector(startButtonTapped), for: .touchUpInside)
    }
    
    private let pickerView = UIPickerView()
...
